// Copyright 2017 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package config;

import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

service HopTestService {
  rpc Hop(HopMessage) returns (HopMessage);
}

message Remote {
  string destination = 1;
  string error = 2;
  bool done = 3;
  google.protobuf.Duration rtt = 4 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
}

message HopMessage {
  string id = 1;
  int64 position = 3;
  repeated Remote remoteDests = 4;
}